@@ -12,6 +12,13 @@
 #include <linux/module.h>
 #include <linux/skbuff.h>
 
+#if LINUX_VERSION_CODE >= KERNEL_VERSION(2, 6, 36)
+#	error ----------------------------------------------------------
+#	error This module has been merged into, and is available in the
+#	error mainline since Linux kernel v2.6.36. Please use that.
+#	error ----------------------------------------------------------
+#endif
+
 #include <linux/netfilter/x_tables.h>
 #include "xt_CHECKSUM.h"
 #include "compat_xtables.h"
